--- a/app/page/template/wire-main.htm
+++ b/app/page/template/wire-main.htm
@@ -13,6 +13,7 @@
         </div>
       </div>
       <div id="left" class="left">
+        #include('list/settings.htm')
         #include('list/archive.htm')
         #include('list/start-ui.htm')
         #include('list/conversation-list.htm')
