add settings styles

--- a/app/style/main.less
+++ b/app/style/main.less
@@ -93,6 +93,7 @@
 @import "list/actions";
 @import "list/archive";
 @import "list/background";
+@import "list/settings";
 @import "list/start-ui";
 @import "list/conversation-list";
 @import "list/conversation-list-call";
