Add settings list view model

--- a/app/page/template/_dist/app.htm
+++ b/app/page/template/_dist/app.htm
@@ -167,6 +167,7 @@
 <script src="/script/view_model/list/StartUIViewModel.js"></script>
 <script src="/script/view_model/list/ArchiveViewModel.js"></script>
 <script src="/script/view_model/list/ActionsViewModel.js"></script>
+<script src="/script/view_model/list/SettingsListViewModel.js"></script>
 <!-- Bindings -->
 <script src="/script/view_model/bindings/CommonBindings.js"></script>
 <script src="/script/view_model/bindings/ConversationListBindings.js"></script>
