Adding list view model

--- a/app/page/template/list/archive.htm
+++ b/app/page/template/list/archive.htm
@@ -1,7 +1,7 @@
-<div id="archive" class="archive">
-  <div class="archive-header">
-    <span class="label-bold-xs" data-bind="l10n_text: z.string.conversation_list_popover_archive"></span>
-    <span class="archive-header-close-button button-icon-large icon-close" data-uie-name="do-close-archive" data-bind="click: click_on_close_archive"></span>
+<div id="archive" class="left-list left-list-archive">
+  <div class="left-list-header">
+    <span class="label-bold-xs" data-bind="l10n_text: z.string.archive_header"></span>
+    <span class="left-list-header-close-button button-icon-large icon-close" data-uie-name="do-close-archive" data-bind="click: click_on_close_archive"></span>
   </div>
   <div class="conversation-list-center">
     <ul class="conversation-list-items" data-bind="antiscroll: should_update_scrollbar, bordered_list: conversations_archived">
