--- a/app/page/template/list/settings.htm
+++ b/app/page/template/list/settings.htm
@@ -1,7 +1,7 @@
-<div id="settings" class="settings">
-  <div class="archive-header">
+<div id="settings" class="left-list left-list-settings">
+  <div class="left-list-header">
     <span class="label-bold-xs">Prefs</span>
-    <span class="archive-header-close-button button-icon-large icon-close" data-uie-name="do-close-archive"></span>
+    <span class="left-list-header-close-button button-icon-large icon-close" data-uie-name="do-close-settings" data-bind="click: click_on_close_settings"></span>
   </div>
   <div class="conversation-list-center">
     test
