--- a/app/page/template/list/start-ui.htm
+++ b/app/page/template/list/start-ui.htm
@@ -25,7 +25,7 @@
   </div>
 
   <div class="start-ui-list-wrapper">
-    <div class="start-ui-list" data-bind="antiscroll: show_people_picker">
+    <div class="start-ui-list" data-bind="antiscroll: should_update_scrollbar">
       <!-- ko ifnot: show_spinner() -->
 
         <!-- ko ifnot: show_search_results() -->
