--- a/app/style/main.less
+++ b/app/style/main.less
@@ -91,8 +91,8 @@
 @import "conversation/giphy";
 
 @import "list/actions";
-@import "list/archive";
 @import "list/background";
+@import "list/list";
 @import "list/settings";
 @import "list/start-ui";
 @import "list/conversation-list";
