--- a/app/style/list/list.less
+++ b/app/style/list/list.less
@@ -17,7 +17,7 @@
  *
  */
 
-.archive {
+.left-list {
   bottom: 0;
   display: flex;
   flex-direction: column;
@@ -26,16 +26,16 @@
   top: 0;
   width: @left-width;
 
-  &:not(.archive-is-visible) {
+  &:not(.left-list-is-visible) {
     .start-ui-transition-fadeout();
   }
 
-  &.archive-is-visible {
+  &.left-list-is-visible {
     .start-ui-transition-fadein();
   }
 }
 
-.archive-header {
+.left-list-header {
   align-items: center;
   display: flex;
   justify-content: center;
@@ -43,7 +43,7 @@
   position: relative;
 }
 
-.archive-header-close-button {
+.left-list-header-close-button {
   position: absolute;
   right: 16px;
   top: 50%;
