Add camera badge to user avatar, increase initial size for XL avatar

--- a/app/page/template/list/settings.htm
+++ b/app/page/template/list/settings.htm
@@ -3,7 +3,8 @@
     <span class="label-bold-xs">Prefs</span>
     <span class="left-list-header-close-button button-icon-large icon-close" data-uie-name="do-close-settings" data-bind="click: click_on_close_settings"></span>
   </div>
-  <div class="conversation-list-center">
-    test
+  <div class="settings-center">
+    <div><span class="icon-screensharing"
+    </div>
   </div>
 </div>
