--- a/app/style/common/variables.less
+++ b/app/style/common/variables.less
@@ -30,7 +30,7 @@
 @font-size-md:        20px;
 @font-size-lg:        24px;
 @font-size-xl:        32px;
-@font-size-xxl:       60px;
+@font-size-xxl:       56px;
 
 @line-height-xs:      11px;
 @line-height-sm:      16px;
@@ -44,7 +44,7 @@
 // ----------------------------------------------------------------------------
 @icon-size-sm:  16px;
 @icon-size-md:  32px;
-@icon-size-lg:  64px;
+@icon-size-lg:  56px;
 
 // ----------------------------------------------------------------------------
 // Accent Colors
@@ -163,7 +163,7 @@
 // ---------------------------------------------------------------------------
 @avatar-diameter-xl:            240px;
 @avatar-border-xl:              1px;
-@avatar-initials-xl:            @font-size-xl;
+@avatar-initials-xl:            @font-size-xxl;
 
 @avatar-diameter-lg:            168px;
 @avatar-border-lg:              1px;
